--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -56,7 +56,7 @@
         font-size: 14px;
         padding: 13px 18px;
         &:hover {
-          @include gradient();
+          @include gradientreverse();
           color: $white_color;
         }
         &.active {
