--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -12,6 +12,16 @@ header {
       button {
         border: 0px;
       }
+      .navbar-brand {
+        width: 50px;
+        height: 50px;
+        padding: 0;
+        position: relative;
+        top: 5px;
+        img {
+          width: 100%;
+        }
+      }
     }
     .navbar-form {
       width: 60%;
