profile design changes

--- a/src/styles/global/helpers/_color.scss
+++ b/src/styles/global/helpers/_color.scss
@@ -6,4 +6,4 @@ $silver_color: #9b9b9b;
 $charcoal_color: #4a4a4a;
 $grey_color: rgba(198, 198, 198, 0.3);
 $blue_color: #4578b3;
-$astronaut_blue: #c7d1d8;
+$nobel_color: #979797;
