--- a/html-design/html/css/pages/_home.scss
+++ b/html-design/html/css/pages/_home.scss
@@ -85,6 +85,43 @@
 			}
 		}
 	}
+	.community{
+		margin-bottom: 8px;
+		@include float();
+    	background-color: $white_color;
+		.community_wrapper{
+			display: flex;
+    		padding: 15px 0px;
+    		border-bottom: 2px solid $grey_color;
+    		@media(max-width: 1199px){
+    			display: block;
+    			float: left;
+    			width: 100%;
+    		}
+    		.community-user-image{
+    			width: 32%;
+    			padding: 0px 15px;
+    			@media(max-width: 1199px){
+	    			float: left;
+	    		}
+    		}
+    		.community-user-name{
+    			width: 33%;
+    			align-self: center;
+    			@media(max-width: 1199px){
+	    			float: left;
+	    		}
+    		}    		
+    		.community-subscribe{
+    			align-self: center;
+    			button{
+    				height: 30px;
+				    padding: 6px;
+				    width: 90px;
+    			}
+    		}    		
+		}
+	}
 	.right_language{
 		@include float();
     	background-color: $white_color;
@@ -121,7 +158,7 @@
 	margin-bottom: 5px;
 	@include float();
 	.feed_header{
-		padding: 15px 0px;
+		padding: 10px;
 		@include float();
 		.profile_image{
 			img{
@@ -174,6 +211,73 @@
     		float: right;
     		a{
     			color: $charcoal_color;
+    		}
+		}		
+	}
+	/*************** Comments CSS ****************/
+	.feed-comment{
+		.comment-wrapper{
+			border-bottom: 1px solid #ededed;			
+			float: left;
+	    	width: 100%;
+	    	padding: 10px;
+	    	&:first-child{
+	    		border-top: 1px solid #ededed;
+	    	}
+	    	textarea{
+	    		height: 38px;
+			    border: 0;
+			    resize: none;
+			    box-shadow: none;
+	    	}
+	    	.emoji_wrapper{
+	    		padding-right: 0px;
+	    	}
+	    	.commenter-info{
+	    		b{
+	    			font-family: 'Helvetica-Bold';
+	    			color: $charcoal_color;
+	    			font-size:14px;
+
+	    		}
+	    		color:$silver_color;
+	    		font-size:12px;	    		    		
+	    	}
+	    	.show_more_options{
+    			padding-right: 5px;
+				text-align: right;
+				a{
+					color:$charcoal_color;
+				}
+    		}
+    		.comment-content{
+    			@media(max-width: 991px){
+    				float: left;
+    			}    			
+	    		p{
+	    			color: $charcoal_color;
+	    			font-size:14px;
+	    			padding-left:68px;
+	    			@media(max-width: 991px){
+	    				padding-left:0px;
+	    			}
+	    			a{
+	    				color:$blue_color;
+	    			}
+	    			.read-more{
+	    				color:$silver_color;
+	    				font-size:14px;
+	    			}
+	    		}	
+	    	}
+		}
+		.view-more-comments{
+			float: left;
+    		width: 100%;
+    		a{
+    			padding: 13px;
+    			display: block;
+    			color:$silver_color;
     		}
 		}
 	}
