--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -110,6 +110,43 @@
       }
     }
   }
+  .community {
+    margin-bottom: 8px;
+    @include float();
+    background-color: $white_color;
+    .community_wrapper {
+      display: flex;
+      padding: 15px 0px;
+      border-bottom: 2px solid $grey_color;
+      @media (max-width: 1199px) {
+        display: block;
+        float: left;
+        width: 100%;
+      }
+      .community-user-image {
+        width: 32%;
+        padding: 0px 15px;
+        @media (max-width: 1199px) {
+          float: left;
+        }
+      }
+      .community-user-name {
+        width: 33%;
+        align-self: center;
+        @media (max-width: 1199px) {
+          float: left;
+        }
+      }
+      .community-subscribe {
+        align-self: center;
+        button {
+          height: 30px;
+          padding: 6px;
+          width: 90px;
+        }
+      }
+    }
+  }
   .right_language {
     @include float();
     background-color: $white_color;
