--- a/public/global/picstagraph-web/css/index.css
+++ b/public/global/picstagraph-web/css/index.css
@@ -252,7 +252,8 @@ hr {
       position: relative; }
       .form-group .options li:last-child {
         float: right; }
-    .form-group .options label, .form-group .options input {
+    .form-group .options label,
+    .form-group .options input {
       display: block;
       position: absolute;
       top: 0;
@@ -269,7 +270,7 @@ hr {
         border: 0; }
     .form-group .options label {
       padding: 10px;
-      border: 1px solid #CCC;
+      border: 1px solid #ccc;
       cursor: pointer;
       z-index: 90;
       border: 1px solid #979797;
@@ -307,7 +308,8 @@ hr {
       position: relative; }
       .form-group .options li:last-child {
         float: right; }
-    .form-group .options label, .form-group .options input {
+    .form-group .options label,
+    .form-group .options input {
       display: block;
       position: absolute;
       top: 0;
@@ -324,7 +326,7 @@ hr {
         border: 0; }
     .form-group .options label {
       padding: 10px;
-      border: 1px solid #CCC;
+      border: 1px solid #ccc;
       cursor: pointer;
       z-index: 90;
       border: 1px solid #979797;
