--- a/html-design/html/css/main.scss
+++ b/html-design/html/css/main.scss
@@ -6,4 +6,6 @@
 @import 'layout/header';
 @import 'pages/home';
 @import 'pages/login';
+@import 'pages/privacy'; 
+@import 'pages/editprofile'; 
 @import 'pages/mobile'; 
