--- a/html-design/html/css/main.scss
+++ b/html-design/html/css/main.scss
@@ -8,4 +8,6 @@
 @import 'pages/login';
 @import 'pages/privacy'; 
 @import 'pages/editprofile'; 
-@import 'pages/mobile'; 
+@import 'pages/businessprofile'; 
+@import 'pages/campaigns'; 
+@import 'pages/mobile';  
