--- a/html-design/html/css/pages/_editprofile.scss
+++ b/html-design/html/css/pages/_editprofile.scss
@@ -7,8 +7,13 @@
 	.form-group{
 		.options{
 			li{
-				width: 182px;
+				width: 49%;
 			}
+		}
+		input[type=number]{
+			width: 32.33%;
+		    float: left;		    
+		    margin-right: 1%;
 		}
 	}  
 }
