left menu hover effect design

--- a/html-design/html/css/layout/_header.scss
+++ b/html-design/html/css/layout/_header.scss
@@ -79,3 +79,7 @@ header{
 		}
 	}
 }
+.left_menu .navbar-nav li a:hover {
+    background-image: radial-gradient(circle at 0 100%, #029bd7, #1f58a6);
+    color: #fff;
+} 
