--- a/html-design/html/css/main.css
+++ b/html-design/html/css/main.css
@@ -153,6 +153,36 @@
 .menu_pics:hover:before {
   background-image: url(../images/p.svg); }
 
+.menu_company:before {
+  background-image: url(../images/shop.svg);
+  height: 20px;
+  content: "";
+  position: absolute;
+  background-size: contain;
+  background-position: top left;
+  left: 15px;
+  width: 100%;
+  background-repeat: no-repeat;
+  transition: all ease 0.5s; }
+
+.menu_company:hover:before {
+  background-image: url(../images/white_shop.svg); }
+
+.menu_creator:before {
+  background-image: url(../images/grey_person.svg);
+  height: 20px;
+  content: "";
+  position: absolute;
+  background-size: contain;
+  background-position: top left;
+  left: 15px;
+  width: 100%;
+  background-repeat: no-repeat;
+  transition: all ease 0.5s; }
+
+.menu_creator:hover:before {
+  background-image: url(../images/person.svg); }
+
 /********* Fonts ********/
 @font-face {
   font-family: 'Helvetica';
@@ -251,6 +281,35 @@ hr {
   .black_button:hover {
     border: 1px solid #4578b3;
     color: #4578b3; }
+
+.left_menu .navbar-nav li a:hover {
+  background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+  color: #fff; }
+
+.read-more {
+  color: #9b9b9b;
+  font-size: 14px; }
+
+.more-strip {
+  background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+  color: #fff;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: -40px;
+  position: relative;
+  z-index: 9999999; }
+  .more-strip:hover {
+    color: #ffffff;
+    cursor: pointer; }
+
+.green-circle {
+  width: 8px;
+  height: 8px;
+  border: 2px solid #7ed321;
+  border-radius: 50%;
+  display: block;
+  margin: 7px auto; }
 
 /************** Form CSS *************************/
 .form-group {
@@ -500,6 +559,8 @@ header {
       color: #4a4a4a;
       font-size: 14px;
       padding: 13px 18px; }
+      .left_menu .navbar-nav li a.log-out {
+        font-family: 'Helvetica-Bold'; }
       .left_menu .navbar-nav li a:hover {
         background-image: radial-gradient(circle at 0 100%, #029bd7, #1f58a6);
         color: #ffffff; }
@@ -507,6 +568,108 @@ header {
         padding-left: 30px;
         padding-top: 2px;
         display: inline-block; }
+
+.left_menu_second {
+  background-color: #ffffff;
+  z-index: 9; }
+  .left_menu_second .navbar-nav {
+    border-bottom: 2px solid rgba(198, 198, 198, 0.3); }
+    .left_menu_second .navbar-nav li {
+      width: 100%; }
+      .left_menu_second .navbar-nav li a {
+        background: transparent;
+        font-family: 'Helvetica';
+        color: #4a4a4a;
+        font-size: 14px;
+        padding: 13px 18px; }
+        .left_menu_second .navbar-nav li a.log-out {
+          font-family: 'Helvetica-Bold'; }
+        .left_menu_second .navbar-nav li a:hover {
+          background-image: radial-gradient(circle at 0 100%, #029bd7, #1f58a6);
+          color: #ffffff; }
+        .left_menu_second .navbar-nav li a span {
+          padding-left: 30px;
+          padding-top: 2px;
+          display: inline-block; }
+  .left_menu_second .left-filters .filter-btn-wrapper {
+    border-top: 10px solid rgba(198, 198, 198, 0.3);
+    float: left;
+    width: 100%; }
+    .left_menu_second .left-filters .filter-btn-wrapper .black_button {
+      width: 100%;
+      background: rgba(198, 198, 198, 0.3); }
+  .left_menu_second .left-filters .filter-wrapper {
+    float: left;
+    width: 100%;
+    padding: 15px 20px;
+    border-bottom: 2px solid rgba(198, 198, 198, 0.3); }
+    .left_menu_second .left-filters .filter-wrapper .filter-title {
+      margin-bottom: 25px; }
+    .left_menu_second .left-filters .filter-wrapper .radio-btn {
+      display: block;
+      position: relative;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      font-weight: normal;
+      color: #9b9b9b; }
+      .left_menu_second .left-filters .filter-wrapper .radio-btn.lbl-margin {
+        margin-bottom: 30px; }
+      .left_menu_second .left-filters .filter-wrapper .radio-btn .checkmark {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 12px;
+        width: 12px;
+        background-color: #eee;
+        border-radius: 50%; }
+        .left_menu_second .left-filters .filter-wrapper .radio-btn .checkmark:after {
+          top: 2px;
+          left: 2px;
+          width: 8px;
+          height: 8px;
+          border-radius: 50%;
+          background: white;
+          content: "";
+          position: absolute;
+          display: none; }
+      .left_menu_second .left-filters .filter-wrapper .radio-btn input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        right: 0px; }
+        .left_menu_second .left-filters .filter-wrapper .radio-btn input ~ .checkmark:after {
+          display: block; }
+    .left_menu_second .left-filters .filter-wrapper input[type=text] {
+      height: 40px;
+      border: 1px solid #9b9b9b;
+      margin-bottom: 25px;
+      padding: 10px;
+      width: 100%; }
+      .left_menu_second .left-filters .filter-wrapper input[type=text]:focus {
+        outline: none;
+        border: 1px solid #4a4a4a; }
+    .left_menu_second .left-filters .filter-wrapper select {
+      height: 40px;
+      width: 100%;
+      border: 1px solid #9b9b9b;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      appearance: none;
+      background-image: url(../images/up-down.svg);
+      background-size: 10px;
+      background-repeat: no-repeat;
+      background-position: top 14px right 10px;
+      padding: 10px; }
+    .left_menu_second .left-filters .filter-wrapper .no-margin {
+      margin: 0px !important; }
+  .left_menu_second .radio-btn:hover input ~ .checkmark {
+    background-color: #ccc; }
+  .left_menu_second .radio-btn input:checked ~ .checkmark {
+    background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7); }
 
 .right_bar > .normal_title {
   margin-bottom: 3px;
@@ -698,6 +861,8 @@ header {
     margin: auto;
     text-align: center;
     color: #4a4a4a; }
+    .login-process .login-wrapper img {
+      width: 20px; }
     .login-process .login-wrapper h3 {
       margin-bottom: 20px;
       float: left;
@@ -1008,9 +1173,55 @@ header {
     margin-bottom: 15px; }
     .campaign-middle-section .progressbar-wrapper .progressbar > div {
       background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
-      width: 40%;
       /* Adjust with JavaScript */
       height: 25px; }
+
+.bills-receipts-tbl table {
+  width: 100%; }
+  .bills-receipts-tbl table thead {
+    background: #ffffff; }
+    .bills-receipts-tbl table thead tr th {
+      font-family: 'Helvetica-Bold';
+      font-size: 12px;
+      padding: 12px;
+      border-bottom: 10px solid #ededed; }
+      .bills-receipts-tbl table thead tr th:nth-child(6) {
+        text-align: center; }
+  .bills-receipts-tbl table tbody td {
+    font-size: 12px;
+    padding: 12px;
+    background: #ffffff;
+    border-bottom: 2px solid #ededed; }
+    .bills-receipts-tbl table tbody td img {
+      width: 20px; }
+
+.data-download {
+  background: #ffffff;
+  padding: 25px 35px; }
+  .data-download .normal_title {
+    padding: 0px;
+    margin-bottom: 30px;
+    font-size: 18px; }
+  .data-download p {
+    font-size: 18px;
+    margin-bottom: 30px; }
+  .data-download form .email-wrapper {
+    padding-left: 0px; }
+  .data-download form .btn-wrapper {
+    padding-right: 0px; }
+    @media (max-width: 991px) {
+      .data-download form .btn-wrapper {
+        width: 100%;
+        padding: 0; } }
+    .data-download form .btn-wrapper button {
+      width: 100%;
+      margin-top: 25px;
+      height: 40px;
+      padding-top: 10px; }
+      @media (max-width: 991px) {
+        .data-download form .btn-wrapper button {
+          width: auto;
+          margin-top: 0; } }
 
 header {
   float: left;
