--- a/html-design/html/css/pages/_campaigns.scss
+++ b/html-design/html/css/pages/_campaigns.scss
@@ -103,7 +103,7 @@
 		    margin-bottom: 15px;  
 		   	> div {
 		       @include gradient();
-		       width: 40%; /* Adjust with JavaScript */
+		        /* Adjust with JavaScript */
 		       height: 25px;		        
 		    }		    
 		}
