--- a/html-design/html/css/pages/_login.scss
+++ b/html-design/html/css/pages/_login.scss
@@ -30,7 +30,10 @@
 		width: 60%;
 		margin: auto;
 		text-align: center;
-		color: $charcoal_color;		
+		color: $charcoal_color;	
+		img{
+			width: 20px;
+		}		
 		h3{
 			margin-bottom: 20px;
 			float: left;
