--- a/html-design/html/css/helpers/_common.scss
+++ b/html-design/html/css/helpers/_common.scss
@@ -109,6 +109,36 @@ hr{
 		color: $blue_color;
 	}
 }
+.left_menu .navbar-nav li a:hover {
+    background-image: radial-gradient(circle at 0 100%,#1f58a6, #029bd7);
+    color: #fff;
+}
+.read-more { 
+    color: $silver_color;
+    font-size: 14px;
+}
+.more-strip{
+	@include gradient();
+    color: #fff;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-top: -40px;
+    position: relative;
+    z-index: 9999999;
+    &:hover{
+    	color: $white_color;
+    	cursor: pointer;
+    }
+}
+.green-circle {
+    width: 8px;
+    height: 8px;
+    border: 2px solid #7ed321;
+    border-radius: 50%;
+    display: block;
+    margin: 7px auto;
+}
 /************** Form CSS *************************/
 .form-group{
 	margin-bottom: 20px;
@@ -178,6 +208,7 @@ hr{
 	    &:focus{
 	    	border-color: #000;
     		box-shadow: none;
+    		outline: none;
 	    }
 	}
 	.error-msg{
@@ -233,11 +264,19 @@ hr{
 		font-weight: normal;
 		font-size: 14px;
 		color:$charcoal_color;
+		float: left;
+    	width: 100%;
 	}
 	button{
 		height: 35px;
 	    padding-top: 7px;
 	    width: 110px;
+	}
+	input[type=number]{		
+		padding: 10px;
+		&::-webkit-inner-spin-button,&::-webkit-outer-spin-button{
+			opacity: 1;
+		}
 	}
 }
 .col-2{
@@ -258,4 +297,22 @@ hr{
 	padding-top:25px;
 	float: left;
 	width: 100%;
+}
+.gradient-button{
+	@include gradient();
+	padding: 2px;
+    border: 0;
+    margin: auto;
+    display: block;
+	span{
+		background: $white_color;
+		color: $blue_color;
+		padding: 10px 120px;
+    	display: block;
+    	transition: background .5s ease;
+		&:hover{
+			background: transparent;
+			color: $white_color;
+		}
+	}
 }
