--- a/html-design/html/css/main.scss
+++ b/html-design/html/css/main.scss
@@ -10,4 +10,6 @@
 @import 'pages/editprofile'; 
 @import 'pages/businessprofile'; 
 @import 'pages/campaigns'; 
+@import 'pages/bills-receipts'; 
+@import 'pages/data-download'; 
 @import 'pages/mobile';  
