--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -282,3 +282,29 @@ hr {
     }
   }
 }
+.read-more {
+  color: $silver_color;
+  font-size: 14px;
+}
+.more-strip {
+  @include gradient();
+  color: #fff;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: -40px;
+  position: relative;
+  z-index: 9999999;
+  &:hover {
+    color: $white_color;
+    cursor: pointer;
+  }
+}
+.green-circle {
+  width: 8px;
+  height: 8px;
+  border: 2px solid #7ed321;
+  border-radius: 50%;
+  display: block;
+  margin: 7px auto;
+}
